[gd_scene load_steps=14 format=3 uid="uid://cqniaqxgj08bh"]

[ext_resource type="Script" path="res://player.gd" id="1_jd23w"]
[ext_resource type="Texture2D" uid="uid://b8csl75jh82a" path="res://animations/player/Run.png" id="2_7ok4j"]
[ext_resource type="Texture2D" uid="uid://baq7rb1bvq22v" path="res://animations/player/Shot_1.png" id="2_ewr50"]
[ext_resource type="Texture2D" uid="uid://dkrh2p4ay01oo" path="res://animations/player/Idle.png" id="2_rc7je"]
[ext_resource type="AudioStream" uid="uid://7nck01sg3kjb" path="res://single-pistol-gunshot-42-40781.mp3" id="3_uam03"]
[ext_resource type="AudioStream" uid="uid://brm3tjy4ps61i" path="res://gun-full-reload-384507.mp3" id="4_1xil3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sbkex"]
size = Vector2(30, 67.5)

[sub_resource type="Animation" id="Animation_lf20h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("idleSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("fireSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("runSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_i5q35"]
resource_name = "firing"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("fireSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 0]
}

[sub_resource type="Animation" id="Animation_jww4q"]
resource_name = "idle"
length = 1.05
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("idleSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_f45t6"]
resource_name = "running"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("runSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_umkil"]
resource_name = "walking_south"
length = 0.8

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b8x61"]
_data = {
"RESET": SubResource("Animation_lf20h"),
"firing": SubResource("Animation_i5q35"),
"idle": SubResource("Animation_jww4q"),
"running": SubResource("Animation_f45t6"),
"walking_south": SubResource("Animation_umkil")
}

[node name="player" type="CharacterBody2D"]
position = Vector2(644, 333)
collision_layer = 2
collision_mask = 13
script = ExtResource("1_jd23w")
fire_delay = 0.6

[node name="fireSprite" type="Sprite2D" parent="."]
scale = Vector2(1.3, 1.3)
texture = ExtResource("2_ewr50")
hframes = 4

[node name="idleSprite" type="Sprite2D" parent="."]
scale = Vector2(1.3, 1.3)
texture = ExtResource("2_rc7je")
hframes = 8

[node name="runSprite" type="Sprite2D" parent="."]
scale = Vector2(1.3, 1.3)
texture = ExtResource("2_7ok4j")
hframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-6, 40)
scale = Vector2(1.3, 1.3)
shape = SubResource("RectangleShape2D_sbkex")

[node name="gun" type="Node2D" parent="."]
position = Vector2(8, 34)

[node name="Marker2D" type="Marker2D" parent="gun"]
position = Vector2(0, 2)

[node name="FireDelay" type="Timer" parent="."]
one_shot = true

[node name="reloadTimer" type="Timer" parent="."]
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -37.0
offset_top = -28.0
offset_right = 33.0
offset_bottom = -13.0
step = 10.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="GunShot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_uam03")
volume_db = -16.0

[node name="reload" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_1xil3")
volume_db = -16.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_b8x61")
}

[node name="is_shooting" type="Timer" parent="."]
wait_time = 0.2

[connection signal="timeout" from="reloadTimer" to="." method="_on_reload_timer_timeout"]
[connection signal="timeout" from="is_shooting" to="." method="_on_is_shooting_timeout"]
